spacing fixes

--- a/assets/sass/components/_icon-links.scss
+++ b/assets/sass/components/_icon-links.scss
@@ -2,6 +2,6 @@
   svg {
     border-radius: 10%;
     width: 3rem;
-    margin-right: .5rem;
+    margin-right: .8rem;
   }
 }
